[package]
name = "kymi-rl"
version = "0.1.0"
authors = ["jravantt"]
edition = "2018"
description = "kymi-rl mandatory description"
repository = "https://github.com/laittis/kymi-rl"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
